# thumbnail_generator

./: .pre-commit-config.yaml  LICENSE.md  LOGGING.md  README.md  pyproject.toml
thumbnail_generator/: __init__.py  get_youtube_video_ids.py  logging_config.py  thumbnail_gen.py  update_youtube_videos.py
